--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!-- 
+	Copyright 2021
+-->
 <head>
 	<title>My First HTML</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
