--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2021@ Lalit Kukreja
 -->
 <head>
-	<title>My First HTML</title>
+	<title>A very Good Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Conatins all the data
 		</p>
 	</main>
 	<footer class="container">
