--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2021@ Lalit Kukreja
 -->
 <head>
-	<title>A very Good Website</title>
+	<title>A very Good Git Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
